Infrastructure/templates/dev_setup_mlbparks_template.yaml
apiVersion: v1
items:
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: mlbparks
      deploymentconfig: mlbparks
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        requests:
          memory: 128Mi
        limits:
          memory: 128Mi
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 900
        updatePeriodSeconds: 1
        post:
          failurePolicy: ignore
          execNewPod:
            command: ["curl","http://mlbparks:8080/ws/data/load/"]
            conatinerName: mlbparks
      type: Rolling
    template:
      metadata:
        labels:
          app: mlbparks
          deploymentconfig: mlbparks
      spec:
        containers:
        - image: mlbparks:latest
          imagePullPolicy: Always
          name: mlbparks
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /ws/info/
              port: 8080
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers: []
- kind: BuildConfig
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: mlbparks:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      binary: {}
      type: Binary
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: jboss-eap70-openshift:1.7
          namespace: openshift
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
      type: parksmap-backend
    name: mlbparks
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: mlbparks
      deploymentconfig: mlbparks
    sessionAffinity: None
    type: ClusterIP
- kind: Route
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mlbparks
      weight: 100
    wildcardPolicy: None
- kind: ImageStream
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks
  spec:
    lookupPolicy:
      local: false
kind: List
metadata: {}
