Infrastructure/templates/prod_setup_mlbparks_template.yaml
apiVersion: v1
items:
# mlbparks
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks-blue
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: mlbparks
      deploymentconfig: mlbparks-blue
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        requests:
          memory: 128Mi
          cpu: 70m
        limits:
          memory: 256Mi
          cpu: 150m
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 650
        updatePeriodSeconds: 1
        post:
          failurePolicy: ignore
          execNewPod:
            command: ["curl","http://mlbparks-blue:8080/ws/data/load/"]
            conatinerName: mlbparks
      type: Rolling
    template:
      metadata:
        labels:
          app: mlbparks
          deploymentconfig: mlbparks-blue
      spec:
        containers:
        - image: mlbparks:0.0
          imagePullPolicy: Always
          name: mlbparks
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/info/
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/info/
              port: 8080
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers: []
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks-green
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: mlbparks
      deploymentconfig: mlbparks-green
    strategy:
      activeDeadlineSeconds: 21600
      resources:
        requests:
          memory: 512Mi
          cpu: 250m
        limits:
          memory: 512Mi
          cpu: 250m
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 750
        updatePeriodSeconds: 1
        post:
          failurePolicy: ignore
          execNewPod:
            command: ["curl","http://mlbparks-green:8080/ws/data/load/"]
            conatinerName: mlbparks
      type: Rolling
    template:
      metadata:
        labels:
          app: mlbparks
          deploymentconfig: mlbparks-green
      spec:
        containers:
        - image: mlbparks:0.0
          imagePullPolicy: Always
          name: mlbparks
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/info/
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /ws/info/
              port: 8080
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers: []
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
      type: parksmap-backend
    name: mlbparks
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: mlbparks
      deploymentconfig: mlbparks-green
    sessionAffinity: None
    type: ClusterIP
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks-green
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: mlbparks
      deploymentconfig: mlbparks-green
    sessionAffinity: None
    type: ClusterIP
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks-blue
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: mlbparks
      deploymentconfig: mlbparks-blue
    sessionAffinity: None
    type: ClusterIP
- kind: Route
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks-green
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mlbparks-green
      weight: 100
    wildcardPolicy: None
- kind: Route
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks-blue
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mlbparks-blue
      weight: 100
    wildcardPolicy: None
- kind: Route
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mlbparks
      weight: 100
    wildcardPolicy: None
- kind: ImageStream
  apiVersion: v1
  metadata:
    labels:
      app: mlbparks
    name: mlbparks
  spec:
    lookupPolicy:
      local: false
kind: List
metadata: {}
